--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -7,7 +7,7 @@
   top: 0;
   width: 100%;
   background-color: $color-06;
-  z-index: 0;
+  z-index: 10;
   height: 60px; // background for header on mobile
 
   .menu-toggle {
